# parameter-framework

bindings/c/: CMakeLists.txt
parameter/: CMakeLists.txt
remote-processor/: CMakeLists.txt
skeleton-subsystem/: CMakeLists.txt
support/windows/: Resource.rc.in
test/test-subsystem/: CMakeLists.txt
xmlserializer/: XmlElement.cpp  XmlElement.h
